Fixed overlapping on smaller screens

--- a/main.css
+++ b/main.css
@@ -309,6 +309,10 @@ img{
     font-size: 2.5vh!important;
     
   }
+  .space{
+    max-height: 30px;
+    height: 3vh;
+  }
 }
 /* @media(min-width:700px) and (max-width:820px){
   .info h2{
@@ -321,6 +325,9 @@ img{
 } */
 
 @media(max-width:700px){
+    .space{
+    height: 4vh;
+  }
   .responsive-container{
     display: flex;
     flex-direction: column;
@@ -383,12 +390,36 @@ img{
 }
 }
 
-@media(max-width:340px){
+@media(max-width:376px){
   
   .info h2{
-    font-size: 20px;
+    font-size: 25px;
+    padding-bottom: 3%;
+    letter-spacing: 0.25rem;
   }
   .info p{
-    font-size: 13px;
+    font-size: 15px;
+  }
+}
+
+@media(max-width:320px){
+  .info{
+    padding-top: 0;
+  }
+  .info h2{
+    font-size: 23px;
+    padding-top: 0;
+    padding-bottom: 3%;
+  }
+  .info p{
+    font-size: 12px;
+  }
+  .img img{
+    height: 49vh;
+  }
+}
+@media(max-width:280px){
+  .space{
+    min-height:6vh;
   }
 }
